--- a/style.css
+++ b/style.css
@@ -853,9 +853,37 @@ body {
 .referral-section {
     width: 100%;
     padding: 296px 140px 112px 172px;
+    text-align: center;
     background-color: #01100B;
     position: relative;
     z-index: 0;
+}
+
+.referral-section > h1 {
+    color: #fff;
+    font-size: 5.33333rem;
+    font-family: Lexend;
+    font-weight: 600;
+    letter-spacing: -0.33333rem;
+}
+
+.referral-section > p {
+    width: 78%;
+    margin: 2rem auto;
+    color: var(--text-color);
+    font-size: 1.33333rem;
+    font-family: Lexend;
+}
+
+.referral-section > button {
+    height: 5.33333rem;
+    margin-top: 6.67rem;
+    padding: 0.66667rem 4.66667rem;
+    font-weight: 500;
+    background-color: var(--secondary-color);
+    color: #fff;
+    border: none;
+    border-radius: 100px;
 }
 
 .referral-container {
@@ -934,4 +962,42 @@ body {
     font-weight: 600;
     letter-spacing: -0.125rem;
     color: var(--third-color);
+}
+
+.order-steps {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 5.33rem;
+    column-gap: 2.67rem;
+    margin-top: 4.08rem;
+}
+
+.order-step p:first-of-type {
+    font-size: 2rem;
+    font-family: Lexend;
+    font-weight: 500;
+    line-height: 150%;
+    letter-spacing: -0.04167rem;
+    color: #fff;
+    margin-top: 2rem;
+}
+
+.order-step p:last-of-type {
+    font-size: 1.33333rem;
+    font-family: Lexend;
+    color: #9D9EA2;
+    margin-top: 2rem;
+}
+
+.order-container {
+    margin: 0 auto;
+    width: 60%;
+    position: relative;
+}
+
+.order-container > img:first-child {
+    top: 0;
+    left: 0;
+    position: absolute;
 }
