full-landing-page-desktop-only

--- a/style.css
+++ b/style.css
@@ -1331,3 +1331,96 @@ body {
     background:#17AF26;
     padding: 2rem 3.67rem;
 }
+
+.about-us {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 5.33rem;
+}
+
+.about-us-content {
+    width: 30%;
+}
+
+.about-us-content img {
+    margin-bottom: 2rem;
+}
+
+.about-us-content p {
+    width: 23rem;
+    color: #9D9EA2;
+    font-size: 1.33333rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 2rem */
+}
+
+.link-content {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+}
+
+.link-content h3 {
+    color: #fff;
+    font-size: 1.66667rem;
+    font-style: normal;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+
+.link-content > p {
+    color: #9D9EA2;
+    font-size: 1.16667rem;
+    font-style: normal;
+    font-weight: 400;
+    margin-bottom: 3.33rem;
+}
+
+.quick-links {
+    display: flex;
+    margin-bottom: 3.33rem;
+}
+
+.quick-links-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1.33rem;
+    flex: 1;
+}
+
+.quick-links-list li {
+    color: #9D9EA2;
+    font-size: 1.16667rem;
+    font-style: normal;
+    font-weight: 400;
+    list-style-type: none;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #46494F;
+    padding-top: 3.33rem;
+}
+
+.footer-content p {
+    color: #717378;
+    font-size: 1.33333rem;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.footer-links {
+    display: flex;
+    gap: 2.67rem;
+    justify-content: space-between;
+}
+
+.footer-links li {
+    color: #9D9EA2;
+    font-size: 1.16667rem;
+    font-style: normal;
+    font-weight: 400;
+    list-style-type: none;
+}
